--- a/project-manager.html
+++ b/project-manager.html
@@ -40,7 +40,11 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.smartrecruiters.com/BuzzClanLLC/743999698541416-technical-project-manager-with-agile-scrum-kanban'>BuzzClan LLC Technical Project Manager with Agile, Scrum & Kanban | SmartRecruiters</a></h5> 
+<h5><a href='http://latitudeinc.applytojob.com/apply/a9QTBbTEyT/Six-Sigma-Training-Project-Manager'>Six Sigma Training Project Manager - Latitude, Inc. - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BuzzClanLLC/743999698541416-technical-project-manager-with-agile-scrum-kanban'>BuzzClan LLC Technical Project Manager with Agile, Scrum & Kanban | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -52,7 +56,7 @@
 <p><span class="badge badge-light">Denver, Colorado  New York, New York  Scottsdale, Arizona</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://kimmel-associates.breezy.hr/p/46d91d393b0d-project-manager'>Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kimmel-associates.breezy.hr/p/46d91d393b0d-project-manager'>Project Manager</a></h5> 
 <p><span class="badge badge-light">Salt Lake City, UT</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -76,7 +80,7 @@
 <p><span class="badge badge-light">San Diego, California United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://burnsmcdonn.referrals.selectminds.com/jobs/ports-maritime-project-manager-6798'>Ports & Maritime Project Manager - Burns & McDonnell Careers</a></h5> 
+<h5><a href='https://burnsmcdonn.referrals.selectminds.com/jobs/ports-maritime-project-manager-6798'>Ports & Maritime Project Manager - Burns & McDonnell Careers</a></h5> 
 <p><span class="badge badge-light">United States  California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -154,7 +158,7 @@
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/nmr-consulting/job/oW5rbfwn'>NMR Consulting Careers - Project Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/nmr-consulting/job/oW5rbfwn'>NMR Consulting Careers - Project Manager</a></h5> 
 <p><span class="badge badge-light">Baltimore, Maryland  Baltimore, MD</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -178,7 +182,7 @@
 <p><span class="badge badge-light">Charlotte North Carolina</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/services/sr-project-manager-emea-1902704/?gh_src=82a8057f1'>Sr. Project Manager, EMEA | Okta</a></h5> 
+<h5><a href='https://www.okta.com/company/careers/services/sr-project-manager-emea-1902704/?gh_src=82a8057f1'>Sr. Project Manager, EMEA | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -254,11 +258,11 @@
 <p><span class="badge badge-light">New York, NY New York, NY United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://veteransezinfoinc.applytojob.com/apply/wRJoJjrAHA/Sustainment-Project-Manager-Remote-Opportunity'>Sustainment Project Manager (Remote Opportunity) - Veterans EZ Info Inc - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://veteransezinfoinc.applytojob.com/apply/wRJoJjrAHA/Sustainment-Project-Manager-Remote-Opportunity'>Sustainment Project Manager (Remote Opportunity) - Veterans EZ Info Inc - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/creatoriq/jobs/4498337002'>Job Application for Implementation Project Manager at CreatorIQ</a></h5> 
+<h5><a href='https://boards.greenhouse.io/creatoriq/jobs/4498337002'>Job Application for Implementation Project Manager at CreatorIQ</a></h5> 
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -318,11 +322,11 @@
 <p><span class="badge badge-light">California California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698515829-project-manager-automotive-service-solutions'>Bosch Group Project Manager Automotive Service Solutions | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698515829-project-manager-automotive-service-solutions'>Bosch Group Project Manager Automotive Service Solutions | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/OceanSprayCranberriesInc/743999698515244-project-manager-product-development'>Ocean Spray Cranberries, Inc. Project Manager - Product Development | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/OceanSprayCranberriesInc/743999698515244-project-manager-product-development'>Ocean Spray Cranberries, Inc. Project Manager - Product Development | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -408,7 +412,7 @@
 <p><span class="badge badge-light">Dublin Dublin</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://siftly.com/jobs/3888'>Assistant Account Executive / Associate Project Manager | SIFTLY</a></h5> 
+<h5><a href='https://siftly.com/jobs/3888'>Assistant Account Executive / Associate Project Manager | SIFTLY</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -432,17 +436,13 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/nicesystems/job/o08rbfwu'>NICE Careers - Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/nicesystems/job/o08rbfwu'>NICE Careers - Project Manager</a></h5> 
 <p><span class="badge badge-light">Chicago, Illinois  Minneapolis, Minnesota  Chicago Minneapolis</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qAv9VfwT&k=Job&j=o7Wsbfwq&__jvst=Employee+Referral&__jvsd=sddHGhwz&__jvsc=Twitter&bid=nDlooMw1'>Hobsons Careers - Agile Program Manager</a></h5> 
 <p><span class="badge badge-light">Arlington, VA Arlington</span></p>
 <p>Posted on:: 2019-10-30</p>
-<hr/>
-<h5><a href='https://khatibalami.breezy.hr/p/17206b8a6ea4-project-manager'>Project Manager at khatibalami</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-30</p>
 <hr/>
 
 
